--- a/public/css/scss/styles.scss
+++ b/public/css/scss/styles.scss
@@ -2,13 +2,13 @@
 
 $myFont: monospace;
 $colorBody: rgba(19, 42, 121, 0.773);
+
 %videoSoleil {
     display: none;
     border: 0.7px solid black;
-    width: 480px;
+    width: 94%;
     border-radius: 10px;
-    margin-left: auto;
-    margin-right: auto;
+    margin: auto;
 }
 
 %css3Button {
@@ -42,24 +42,22 @@ iframe {
     border: 1px solid white;
     background-color: rgba(183, 210, 214, 0.1);
     border-radius: 10px;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 2.5%;
-    margin-top: 0.5%;
     text-align: center;
 }
+
 #CV {
     //display: none;
     //border: 1px solid white;
     //background-color: rgba(183, 210, 214, 0.1);
     //border-radius: 10px;
-    width: 480px;
+    width: 96%;
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 0.5%;
     margin-top: 0.5%;
     text-align: center;
 }
+
 #ADM1N {
     //display: none;
     border: 1px solid white;
@@ -69,6 +67,7 @@ iframe {
     margin-top: 0.5%;
     text-align: center;
 }
+
 #JOUST {
     //display: none;
 }
@@ -246,17 +245,17 @@ a {
     margin-right: 7px;
     margin-bottom: 10px;
     margin-top: 5px;
+    margin-bottom: 2.5%;
 }
 
-//#jugglejungle,
-#s0leil {
+#s0leil,
+#jugglejungle {
     @extend %videoSoleil;
 }
 
 #ci3l,
 #m0nC4nvaM3r,
-#m0nC4nvaC0lline {
-}
+#m0nC4nvaC0lline {}
 
 #BtnJs0nPl4Y {
     position: absolute;
@@ -328,8 +327,4 @@ a {
     font-size: 1em;
     color: #ffffff;
     top: 5px;
-}
-
-.twitter-timeline {
-    width: 480px;
 }
