--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -334,7 +334,7 @@ template {
 #jugglejungle {
   display: none;
   border: 0.7px solid black;
-  width: 94%;
+  width: 400px;
   border-radius: 10px;
   margin: auto;
 }
@@ -372,7 +372,7 @@ iframe {
 }
 
 #CV {
-  width: 96%;
+  width: 400px;
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 0.5%;
@@ -563,7 +563,7 @@ a {
   width: 16%;
   left: 42%;
   right: 42%;
-  margin-top: 230px;
+  margin-top: 190px;
   font-family: monospace;
   border-radius: 28px;
   font-size: 1em;
