--- a/public/adm1n.pug
+++ b/public/adm1n.pug
@@ -29,17 +29,17 @@ append content
               br
               //https://www.facebook.com/mikael.sosmooth/posts/2962150700569375
               //iframe(src='https://www.facebook.com/plugins/video.php?href=https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fmikael.sosmooth%2Fvideos%2F2962150700569375%2F&width=1280' width='480' height='340' style='border:none;overflow:hidden' scrolling='no' frameborder='0' allowtransparency='true' allowfullscreen='true')
-              //img(src="/static/img/ingenieurOrNot.jpg", alt="" width='480' height='340')
-              .fb-post(data-href='https://www.facebook.com/mikael.sosmooth/posts/2962150700569375', data-show-text='true', data-width='')
+              //img(src="/static/img/ingenieurOrNot.jpg" alt="" width='480' height='340')
+              .fb-post(data-href='https://www.facebook.com/mikael.sosmooth/posts/2962150700569375' data-show-text='true' data-width='')
                 blockquote.fb-xfbml-parse-ignore(cite='https://developers.facebook.com/mikael.sosmooth/posts/2962150700569375')
                   p
                     | Ingénieur vs pas ingénieur
                     | Ingénieur pendant les 6mois de validation en entreprise des compétences de la formation de...
                   | Publiée par 
-                  a(href='#', role='button') Mikaël Sosmooth
+                  a(href='#' role='button') Mikaël Sosmooth
                   //|  sur 
                   //a(href='https://developers.facebook.com/mikael.sosmooth/posts/2962150700569375') Vendredi 15 mai 2020
-              iframe(src='https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fmikael.sosmooth%2Fvideos%2F3005119319605846%2F&show_text=0&width=267&t=128', width='267', height='476', style='border:none;overflow:hidden', scrolling='no', frameborder='0', allowtransparency='true', allowfullscreen='true')
+              iframe(src='https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fmikael.sosmooth%2Fvideos%2F3005119319605846%2F&show_text=0&width=267&t=128' width='267' height='476' style='border:none;overflow:hidden' scrolling='no' frameborder='0' allowtransparency='true' allowfullscreen='true')
               br
               h1 Flux FACEBOOK LIVE security cams + showScreen helloWorld
               br
@@ -47,13 +47,13 @@ append content
               br
               iframe(src='https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fmikael.sosmooth%2Fvideos%2F2979073332210445%2F&width=1280' width='480' height='202.5' style='border:none;overflow:hidden' scrolling='no' frameborder='0' allowtransparency='true' allowfullscreen='true')
               br
-              iframe(src='https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fmikael.sosmooth%2Fvideos%2F2945098235607955%2F&show_text=1&width=267', style='border:none;overflow:hidden', scrolling='no', allowtransparency='true', allow='encrypted-media', allowfullscreen='true', width='267', height='569', frameborder='0')
+              iframe(src='https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fmikael.sosmooth%2Fvideos%2F2945098235607955%2F&show_text=1&width=267' style='border:none;overflow:hidden' scrolling='no' allowtransparency='true' allow='encrypted-media' allowfullscreen='true' width='267' height='569' frameborder='0')
               h1.liens Proof of hack, apparently from some eastern people
               br
               iframe(src='https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fmikael.sosmooth%2Fposts%2F2966141376836974&width=500' width='480' height='370' style='border:none;overflow:hidden' scrolling='no' frameborder='0' allowtransparency='true' allow='encrypted-media')
               //@Emmanuel et Brigitte MACRON
               h1.liens Visite du Président de la Russie aux Macrons lors de leurs vacances estivales
-                iframe(src='https://www.youtube.com/embed/8wl2ddpwEhI', allow='accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture', allowfullscreen='', width='480', height='300', frameborder='0')
+                iframe(src='https://www.youtube.com/embed/8wl2ddpwEhI' allow='accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture' allowfullscreen='' width='480' height='300' frameborder='0')
                 p 
                   |  J'espère sincèrement que vous avez davantage respecté le président Vladimir Putin
                   |  hors caméra.
@@ -64,16 +64,16 @@ append content
               br
               iframe(src='https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fmikael.sosmooth%2Fvideos%2F2961521140632331%2F&show_text=1&width=267' width='480' height='960' style='border:none;overflow:hidden' scrolling='no' frameborder='0' allowtransparency='true' allowfullscreen='true')
               br
-              iframe(src='https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fmikael.sosmooth%2Fvideos%2F2961580340626413%2F&show_text=1&width=560', style='border:none;overflow:hidden', scrolling='no', allowtransparency='true', allow='encrypted-media', allowfullscreen='true', width='480', height='340', frameborder='0')
+              iframe(src='https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fmikael.sosmooth%2Fvideos%2F2961580340626413%2F&show_text=1&width=560' style='border:none;overflow:hidden' scrolling='no' allowtransparency='true' allow='encrypted-media' allowfullscreen='true' width='480' height='340' frameborder='0')
               br
-              iframe(src='https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fmikael.sosmooth%2Fvideos%2F2961584057292706%2F&show_text=1&width=560', style='border:none;overflow:hidden', scrolling='no', allowtransparency='true', allow='encrypted-media', allowfullscreen='true', width='480', height='340', frameborder='0')
+              iframe(src='https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fmikael.sosmooth%2Fvideos%2F2961584057292706%2F&show_text=1&width=560' style='border:none;overflow:hidden' scrolling='no' allowtransparency='true' allow='encrypted-media' allowfullscreen='true' width='480' height='340' frameborder='0')
               br
               iframe(src='https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fmikael.sosmooth%2Fvideos%2F2974579935993118%2F&width=1280' width='480' height='340' style='border:none;overflow:hidden' scrolling='no' frameborder='0' allowtransparency='true' allowfullscreen='true')
               br
               iframe(src='https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fmikael.sosmooth%2Fvideos%2F2974706795980432%2F&width=1280' width='480' height='300' style='border:none;overflow:hidden' scrolling='no' frameborder='0' allowtransparency='true' allowfullscreen='true')
               br
             //  
-              //- h1 ICE
+            //- h1 ICE
             //-  
               br
               iframe(src='https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fmikael.sosmooth%2Fvideos%2F2967861029998342%2F&width=1280' width='480' height='340' style='border:none;overflow:hidden' scrolling='no' frameborder='0' allowtransparency='true' allowfullscreen='true')
@@ -355,7 +355,7 @@ append content
             //- p.hack - kb3035131 v1.0.3
             //- p.hack - python v3.8.3
             //- p.hack Type ENTER to exit:
-          
+
           //- form#adm1n(action='/layoutAdmin' method='post')
           //-   label.LabelAdmin(for='POST-user') user
           //-   br
