--- a/public/index.pug
+++ b/public/index.pug
@@ -16,8 +16,8 @@ append content
             include jeuCV.pug
             .paraFoot This website hosts my skills, projects and experiences.
             #divTwitter
-              a.twitter-timeline(data-width='480' data-height='640' data-chrome="transparent noscrollbar border" data-theme='' href='https://twitter.com/K431M1?ref_src=K431M1') Tweets by M1K431
-            iframe(width='600' height='300' sandbox='allow-scripts allow-same-origin allow-popups allow-popups-to-escape-sandbox' layout='responsive' resizable='' frameborder='0' src='https://embed.redditmedia.com/widgets/card.html?amp=1&url=https%3A%2F%2Fwww.reddit.com%2Fr%2Fhackintosh%2Fcomments%2Fgumcqr%2Fits_here%2F')
+              a.twitter-timeline(data-width='480' data-height='960' data-chrome="transparent border" data-theme='' href='https://twitter.com/K431M1?ref_src=K431M1') Tweets by M1K431
+            iframe(width='480' height='400' src='https://embed.redditmedia.com/widgets/card.html?scrollbar=0&amp=1&url=https%3A%2F%2Fwww.reddit.com%2Fr%2Fhackintosh%2Fcomments%2Fgumcqr%2Fits_here%2F' frameborder='0' allow='accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture' allowfullscreen='')
       //noborders noheader nofooter
       //include joust.pug
       //include adm1n.pug
