--- a/public/css/cv.css
+++ b/public/css/cv.css
@@ -73,7 +73,7 @@ html {
 }
 
 .titreH2 {
-  color: #000;
+  color: white;
   text-transform: uppercase;
   margin-bottom: 0.3em;
   margin-top: 0.3em;
@@ -144,8 +144,8 @@ html {
 }
 
 .complemen {
-  border: 1px solid #08021f;
-  background-color: rgba(255, 255, 255, 0.3);
+  color: white;
+  margin: 1%;
   border-radius: 10px;
   display: none;
 }
@@ -263,8 +263,6 @@ p.flags {
 }
 
 .competen {
-  border: 1px solid #08021f;
-  color: rgba(0, 0, 0, 0.9);
   border-radius: 10px;
   margin: 1%;
   text-align: center;
