sorting my thoughts about deaF last summer

--- a/public/adm1n.pug
+++ b/public/adm1n.pug
@@ -9,27 +9,24 @@ append content
           h1.liens PC SECURITE 
           #container.col
             p
-              | Fil de caméra PC
-              br 
-              | Photographie prise en réanimation, après avoir réussi à  m'échapper par ma fenêtre avec ma trotinnette electrique,
-              | xiaomi elle aussi, alors que la police essayait d'entrer par la force dans mon logement.
-              | Je me souviens que le voisin du premier leur a indiqué ma fuite par la fenêtre.
+              | Photographie prise en réanimation fin aout 2019, après avoir réussi à m'échapper par ma fenêtre avec ma trotinnette electrique,
+              |  alors que la police essayait d'entrer par la force dans mon logement.
+              | Je me souviens que le voisin du premier leur a indiqué ma fuite par la fenêtre (vidéo du voisin en mode "footing ci-dessous").
               | Apparement j'aurai été retrouvé en arrêt cardio-respiratoire (15min) à l'arrivée des soignants.
               br 
               iframe(src='https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fmikael.sosmooth%2Fposts%2F2971859896265122&width=500' style='border:none;overflow:hidden' scrolling='no' allowtransparency='true' allow='encrypted-media' width='280' height='480' frameborder='0')
               br
+              | Fil de caméra PC
               | = cable de caméra:
               | ensemble de filS au sein d'une gaine commune 
               br
               | @Mme Ghiberto de la Police nationale Française
               br
-              //iframe(src='https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fmikael.sosmooth%2Fvideos%2F2961527407298371%2F&show_text=1&width=560' width='480' height='340' style='border:none;overflow:hidden' scrolling='no' frameborder='0' allowtransparency='true' allowfullscreen='true')
-              //br
-              | Tentative de mutilation au LBD ? @Police nationale Française (video fb live via ordinateur avant achat xiaomi à retrouver)
+              iframe(src='https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fmikael.sosmooth%2Fvideos%2F2961527407298371%2F&show_text=1&width=560' width='480' height='340' style='border:none;overflow:hidden' scrolling='no' frameborder='0' allowtransparency='true' allowfullscreen='true')
               br
-              //https://www.facebook.com/mikael.sosmooth/posts/2962150700569375
-              //iframe(src='https://www.facebook.com/plugins/video.php?href=https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fmikael.sosmooth%2Fvideos%2F2962150700569375%2F&width=1280' width='480' height='340' style='border:none;overflow:hidden' scrolling='no' frameborder='0' allowtransparency='true' allowfullscreen='true')
-              //img(src="/static/img/ingenieurOrNot.jpg" alt="" width='480' height='340')
+              | Tentative de mutilation au LBD ? @Police nationale Française (video fb live via ordinateur avant achat xiaomi VOLEE PAR LE VOISIN JOGGER)
+              br
+              img(src="/static/img/ingenieurOrNot.jpg" alt="" width='480' height='340')
               .fb-post(data-href='https://www.facebook.com/mikael.sosmooth/posts/2962150700569375' data-show-text='true' data-width='')
                 blockquote.fb-xfbml-parse-ignore(cite='https://developers.facebook.com/mikael.sosmooth/posts/2962150700569375')
                   p
@@ -47,7 +44,10 @@ append content
               br
               iframe(src='https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fmikael.sosmooth%2Fvideos%2F2979073332210445%2F&width=1280' width='480' height='202.5' style='border:none;overflow:hidden' scrolling='no' frameborder='0' allowtransparency='true' allowfullscreen='true')
               br
-              iframe(src='https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fmikael.sosmooth%2Fvideos%2F2945098235607955%2F&show_text=1&width=267' style='border:none;overflow:hidden' scrolling='no' allowtransparency='true' allow='encrypted-media' allowfullscreen='true' width='267' height='569' frameborder='0')
+              p "T'embrasseras ta mère pour moi" il s'agit donc d'un des policiers nationnaux en charge de l'affaire concernant mon homicide le 26 août 2019.
+                |  il s'amuse également en fin de vidéo du dsyfonctionnement de ma précédente montre android wear depuis ma mise en garde à vue durant le confinement #COVID pour avoir voulu déposer plainte.
+              iframe(src='https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fmikael.sosmooth%2Fvideos%2F2945098235607955%2F&show_text=1&width=267' style='border:none;overflow:hidden' scrolling='no' allowtransparency='true' allow='encrypted-media' allowfullscreen='true' width='267' height='650' frameborder='0')
+            //-  
               h1.liens Proof of hack, apparently from some eastern people
               br
               iframe(src='https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fmikael.sosmooth%2Fposts%2F2966141376836974&width=500' width='480' height='370' style='border:none;overflow:hidden' scrolling='no' frameborder='0' allowtransparency='true' allow='encrypted-media')
@@ -57,7 +57,6 @@ append content
                 p 
                   |  J'espère sincèrement que vous avez davantage respecté le président Vladimir Putin
                   |  hors caméra.
-            //-  
               iframe(src='https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fmikael.sosmooth%2Fvideos%2F2981340468650398%2F&width=1280' width='480' height='340' style='border:none;overflow:hidden' scrolling='no' frameborder='0' allowtransparency='true' allowfullscreen='true')
               br
               iframe(src='https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fmikael.sosmooth%2Fvideos%2F2975556802562098%2F&width=1280' width='480' height='340' style='border:none;overflow:hidden' scrolling='no' frameborder='0' allowtransparency='true' allowfullscreen='true')
