mise en page gifted

--- a/public/giftedADHD.pug
+++ b/public/giftedADHD.pug
@@ -5,8 +5,11 @@ append content
 			#m0ncentrage
 				#INDEX
 					h1.liens
-						span.english ADHD and High IQ: What&apos;s the Connection ?
-						span.french TDAH et QI Élevé: Quels liens ?
+						span.english ADHD and High IQ: 
+						span.french TDAH et QI Élevé: 
+						br 
+						span.english What&apos;s the Connection ? 
+						span.french Quels liens ?
 					p.flags
 						img#english(src='/static/img/uk.svg' alt='English' height='30')
 						img#french(src='/static/img/france.svg' alt='Français' height='30')
@@ -29,10 +32,7 @@ append content
 						span.french mis à jour:
 						|  25/05/2011
 						br
-						span.english translated by:
-						span.french traduit par:
-						|  Mikaël Garcia
-						| 19/03/2020
+						span.french traduit par: Mikaël Garcia le 19/03/2020
 					p
 						span.english
 							| Parents sometimes wonder if their children can have both ADHD and High IQ levels.
