--- a/public/layoutNav.pug
+++ b/public/layoutNav.pug
@@ -21,8 +21,8 @@ html(lang="en")
           a#intro.nav(rel='preconnect' href='/nomPage?r=index' class='css3button') Intro
         li
           a#resume.nav(rel='preconnect' href='/nomPage?r=cv' class='css3button') CV
-        //li
-          //a#admin.nav(rel='preconnect' href='/nomPage?r=adm1n' class='css3button') aL1v3
+        li
+          a#admin.nav(rel='preconnect' href='/nomPage?r=adm1n' class='css3button') aL1v3
         li
           a#adhd.nav(rel='preconnect' href='/nomPage?r=giftedADHD' class='css3button') ADHD
     block content
