dont pause just play

--- a/public/layoutNav.pug
+++ b/public/layoutNav.pug
@@ -8,9 +8,10 @@ html(lang="en")
       meta(http-equiv="X-UA-Compatible", content="ie=edge")
       meta(name='description' content='My Javascript Portfolio')
       meta(property='og:title' content='IBM RPG & Javascript Developer')
+      meta(property='og:type' content='image')
+      meta(property='og:url' content='http://www.mikael.ml')
       meta(property='og:image' content='//mikael.ml/static/img/ogImage.png')
       meta(property='og:description' content='My Javascript Portfolio')
-      meta(property='og:url' content='//mikael.ml')
       link(rel='manifest' href='/static/mikael.manifest')
       link(rel='stylesheet' href='/static/css/styles.css')
       link(rel='stylesheet' href='/static/css/cv.css') 
