--- a/public/index.pug
+++ b/public/index.pug
@@ -21,7 +21,7 @@ append content
       //include joust.pug
       //include adm1n.pug
 append scripts
-  script(src='//embed.redditmedia.com/widgets/platform.js' async)
+  script(async='' src='//embed.redditmedia.com/widgets/platform.js' charset='UTF-8')
   script(src='https://platform.twitter.com/widgets.js' defer)
   script(src='/static/js/soleil.js' async)
   script(src='/static/js/BrickBreaker.js' async)
