--- a/public/cv.pug
+++ b/public/cv.pug
@@ -73,6 +73,7 @@ append content
               .infolast.french Accueil, service et conseil commercial
               .infolast.english Incoming, service and commercial advice
               .infolast.spanish Recepción, servicio y asesoramiento comercial
+          hr
           .competen#experiences
             h2.titreH2.french Exp&eacute;riences
             h2.titreH2.english Experiences
@@ -82,19 +83,16 @@ append content
               .infojob.french Dévelopement sur IBM i (CL, SQL, RPG, arcad, Rdi), Pro a Pro  Montauban, depuis août 2019
               .infojob.english IBM i Developper (CL, SQL, RPG, arcad, Rdi), Pro a Pro  Montauban, depuis août 2019
               .infojob.spanish IBM i Developper (CL, SQL, RPG, arcad, Rdi), Pro a Pro  Montauban, depuis août 2019
-            hr
             .jobs
               h3.titreH3 Ingénieur étude et développement
               .infojob.french Dévelopement sur IBM i (CL, SQL, RPG, arcad, Rdi), OCSI Paris 01, depuis janvier 2019
               .infojob.english IBM i Developper (CL, SQL, RPG, arcad, Rdi), OCSI Paris 01, depuis janvier 2019
               .infojob.spanish IBM i Developper (CL, SQL, RPG, arcad, Rdi), OCSI Paris 01, depuis janvier 2019
-            hr
             .jobs
               h3.titreH3 Webmaster
               .infojob.french Mise &agrave; jour de la base de donn&eacute;es site Ecommerce (magento) www.snow-concept.com, l&rsquo;Alpe d&rsquo;Huez, d&eacute;cembre 2016
               .infojob.english Update of the Ecommerce website database (magento) www.snow-concept.com, Alpe d'Huez, December 2016
               .infojob.spanish Actualización de la base de datos del sitio snow-concept.com (magento), Alpe d'Huez, diciembre de 2016
-            hr
             .jobs
               h3.titreH3.french Technicien audio-visuel
               .infojob.french Accessoiriste: JLA productions, Martigues 2015
@@ -108,7 +106,6 @@ append content
               .infojob.spanish gerente de apoyos: JLA productions, Martigues 2015
               .infojob.spanish Subgerente: Auteurs Associ&eacute;s, Grasse 2014
               .infojob.spanish Refuerzo de decoración y figuración: Gazelle Cie, DEMD, Europacorp, Marseille 2013
-              hr
             .jobs
               h3.titreH3.french Dessinateur Projeteur HVAC
               .infojob.french Etude des projets de construction ERP &quot;Castorama&quot;, AUXITEC ing&eacute;nierie, Hy&egrave;res, septembre 2012
@@ -116,7 +113,6 @@ append content
               .infojob.english Study of construction projects ERP "Castorama" Toulouse union and Antibes, AUXITEC engineering, Hyères, September 2012
               h3.titreH3.spanish Diseñador de HVAC
               .infojob.spanish Estudio de proyectos de construcción de tiendas "Castorama" Toulouse Union y Antibes, ingeniería AUXITEC, Hyères, septiembre de 2012
-              hr
             .jobs
               h3.titreH3.french Developpeur PHP HTML CSS
               .infojob.french Introduction &agrave; JavaScript (JQuery) www.stand-service.com Alphabet Stand Service La Garde, 2012
@@ -124,7 +120,6 @@ append content
               .infojob.english Introduction to JavaScript (JQuery) www.stand-service.com Alphabet Stand Service La Garde, 2012
               h3.titreH3.spanish Desarrollador PHP CSS HTML
               .infojob.spanish introducción a JavaScript (JQuery) www.stand-service.com Alphabet Stand Service La Garde, 2012
-              hr
             .jobs
               h3.titreH3.french Technicien d&apos;&eacute;tudes en Design et D&eacute;coration
               .infojob.french Alphabet Stand Service (MIPCOM/MIPTV, MIDEM, FIF&mldr;), La Garde, 2010-2012
@@ -132,7 +127,6 @@ append content
               .infojob.english Alphabet Stand Service (MIPCOM/MIPTV, MIDEM, FIF&mldr;), La Garde, 2010-2012
               h3.titreH3.spanish Técnico de Diseño y Decoración
               .infojob.spanish Alphabet Stand Service (MIPCOM/MIPTV, MIDEM, FIF&mldr;), La Garde, 2010-2012
-              hr
             .jobs
               h3.titreH3.french Vendeur et Technicien Ski
               .infojob.french Nevada Sports l&rsquo;Alpe d&rsquo;Huez, 2008-2009
@@ -140,7 +134,6 @@ append content
               .infojob.english Nevada Sports l&rsquo;Alpe d&rsquo;Huez, 2008-2009
               h3.titreH3.spanish Vendedor de esquí y de material deportivo
               .infojob.spanish Nevada Sports l&rsquo;Alpe d&rsquo;Huez, 2008-2009
-              hr
             .jobs
               h3.titreH3.french Technicien ADSL
               .infojob.french British Telecom Critical Systems Le Plessis-Robinson, 2008
@@ -148,7 +141,6 @@ append content
               .infojob.english British Telecom Critical Systems Le Plessis-Robinson, 2008
               h3.titreH3.spanish Técnico de ADSL
               .infojob.spanish British Telecom Critical Systems Le Plessis-Robinson, 2008
-              hr
             .jobs
               h3.titreH3.french Technicien Ski et Snowboard
               .infojob.french Intersport, l&rsquo;Alpe d&rsquo;Huez, 2007-2008
@@ -156,7 +148,6 @@ append content
               .infojob.english Intersport, l&rsquo;Alpe d&rsquo;Huez, 2007-2008
               h3.titreH3.spanish Técnico de esquí y snowboard
               .infojob.spanish Intersport, l&rsquo;Alpe d&rsquo;Huez, 2007-2008
-              hr
             .jobs
               h3.titreH3.french Technicien et Administrateur syst&egrave;mes et r&eacute;seaux microsoft
               h3.titreH3.english Technician and Administrator Systems and Networks microsoft
@@ -164,7 +155,6 @@ append content
               .infojob.french Administration serveurs Windows et clients GNU/LINUX Maintenance et installation systemes informatique Developpement html php (script de backup) SECOB, St Jean-de-la-Ruelle, 2005-2007
               .infojob.english Windows server administration and GNU / LINUX clients Maintenance and installation of computer systems, html php development (backup script), SECOB, St Jean-de-la-Ruelle, 2005-2007
               .infojob.spanish Administración de servidores Windows y clientes GNU / LINUX Mantenimiento e instalación de sistemas infojobrmáticos, desarollamiento html php (script de copia de seguridad), SECOB, St Jean-de-la-Ruelle, 2005-2007
-              hr
             .jobs
               h3.titreH3.french Technicien Syst&egrave;mes et R&eacute;seaux
               .infojob.french Maintenance et installation systemes informatique Developpement html php d&apos;un site de devis securis&eacute; Emergence, Orl&eacute;ans, 2004
@@ -172,7 +162,6 @@ append content
               .infojob.english Maintenance and installation of computer systems PHP html development of a secured quote site Emergence, Orléans, 2004
               h3.titreH3.spanish Técnico de Sistemas y Redes
               .infojob.spanish Mantenimiento e instalación de sistemas infojobrmáticos PHP html desarrollo de un sitio de cotizaciones seguras Emergence, Orléans, 2004
-              hr
             .jobs
               h3.titreH3.french Adjoint au responsable de magasin
               .infojob.french Micromania, St Jean de la Ruelle, 2003
@@ -180,7 +169,6 @@ append content
               .infojob.english Micromania, St Jean de la Ruelle, 2003
               h3.titreH3.spanish Asistente del gerente de la tienda
               .infojob.spanish Micromania, St Jean de la Ruelle, 2003
-              hr
             .jobs
               h3.titreH3.french Emplois &eacute;tudiant
               .infojob.french Conseiller de vente en espace culturel Leclerc, serveur/barman, Ouvrier boulanger, Employ&eacute; polyvalent chez Intermarch&eacute;
@@ -188,6 +176,7 @@ append content
               .infojob.english Cultural sales consultant Leclerc, waiter / bartender, Bakery worker, multi-purpose employee at Intermarché
               h3.titreH3.spanish Trabajos de estudiante
               .infojob.spanish Asesor de ventas culturales Leclerc, camarero / camarero, trabajador de panadería, empleado multipropósito en Intermarché
+          hr
           .competen#formation
             h2.titreH2.french Formation
             h2.titreH2.english Training
@@ -205,7 +194,6 @@ append content
               .infojob.french Webservices for IBM i series
               .infojob.english Webservices for IBM i series
               .infojob.spanish Webservices for IBM i series
-              hr
             .jobs
               h3.titreH3.french D&eacute;veloppeur JavaScript FullStack
               h3.titreH3.english FullStack Javascript Developer
@@ -219,7 +207,6 @@ append content
               .infojob.french Cr&eacute;ation d&apos;applications web et mobiles riche backend JS
               .infojob.english Creating rich web and mobile applications backend JS
               .infojob.spanish Creación de aplicaciones web y móviles ricas en el back-end de JS
-              hr
             .jobs
               h3.titreH3.french TP de technicien d&rsquo;&eacute;tude en b&acirc;timent option dessin
               h3.titreH3.english Construction Engineer Technician Drawing Option
@@ -231,7 +218,6 @@ append content
               .infojob.french Notions d&apos;urbanisme et de voirie
               .infojob.english Notions of town planning and roads
               .infojob.spanish Nociones de urbanismo y carreteras
-              hr
             .jobs
               h3.titreH3 IUT informatique d&apos;Orl&eacute;ans
               .infojob.french Syst&eacute;mes et R&eacute;seaux: Administration et d&eacute;ploiementent r&eacute;seau de syst&egrave;mes en environnement Linux, regexp/assembleur
@@ -243,7 +229,6 @@ append content
               .infojob.spanish Sistemas y Redes: Red de administración e implementación de sistemas en entorno Linux, nociones de ensamblador regexp        
               .infojob.spanish Base de Datos: Análisis (merise), diseño (MCD, MCT), mantenimiento
               .infojob.spanish Programación: Langage C, C++, SQL, bsh, assembly language
-              hr
             .jobs
               h3.titreH3.french Baccalaur&eacute;at Scientifique
               .infojob.french Sp&eacute;cialit&eacute; physique-chimie
@@ -251,6 +236,7 @@ append content
               .infojob.english Specialty physics-chemistry
               h3.titreH3.spanish Bachillerato Científico        
               .infojob.spanish Especialidad física-química
+          hr
           .complemen#complementaire
             //h2.titreH2.french El&eacute;ments Compl&eacute;mentaires
             //h2.titreH2.english Additional Info
@@ -261,7 +247,8 @@ append content
               img.linkedin(src='/static/img/LinkedIn_Logo.svg' alt='logolinkedin' onclick='openlinkedin();')
             .infojob.spanish Permiso: auto, motocicleta.
               img.linkedin(src='/static/img/LinkedIn_Logo.svg' alt='logolinkedin' onclick='openlinkedin();')
-            .infojob.french Sports: gym, sports de glisse, VTT.
+            .infojob.french Sports: 
+              | gym, sports de glisse, VTT.
             .infojob.english Sports: gym, board sports, mountain biking.
             .infojob.spanish Deporte: gimnasio, deportes de tabla, ciclismo de montaña.
             .infojob.french Hobbies: electronique, d&eacute;coration, design, r&eacute;novation.
