--- a/public/css/scss/styles.scss
+++ b/public/css/scss/styles.scss
@@ -95,12 +95,13 @@ h2.how {
 
 h1,
 h2,
-h3,
-h4,
 nav {
     color: white;
     text-align: center;
     font-family: $myFont;
+}
+span {
+    font-size: 1.2em;
 }
 
 nav {
