mise à jour TDAH + log

--- a/public/css/scss/styles.scss
+++ b/public/css/scss/styles.scss
@@ -81,8 +81,10 @@ h1.liens {
     margin-bottom: 0;
 }
 
-h3.auteurs {
+.auteurs {
     margin-top: 0;
+    font-size: 1em;
+    color: white;
 }
 
 p.first {
