--- a/public/giftedADHD.pug
+++ b/public/giftedADHD.pug
@@ -5,34 +5,35 @@ append content
 			#m0ncentrage
 				#INDEX
 					h1.liens
-						span.english ADHD and High IQ: 
-						span.french TDAH et QI Élevé: 
+						.english ADHD and High IQ: 
+						.french TDAH et QI Élevé: 
 						br 
-						span.english What&apos;s the Connection ? 
-						span.french Quels liens ?
+						.english What&apos;s the Connection ? 
+						.french Quels liens ?
 					p.flags
 						img#english(src='/static/img/uk.svg' alt='English' height='30')
 						img#french(src='/static/img/france.svg' alt='Français' height='30')
 					h3.auteurs
-						span.english written by:
-						span.french écrit par:
-						|  Lynn-nore Chittom
+						.english Written by:
+						.french Ecrit par:
+						span Lynn-nore Chittom
 						br
-						span.english edited by:
-						span.french édité par:
-						|  Daniel P. McGoldrick
+						.english Edited by:
+						.french Edité par:
+						span Daniel P. McGoldrick
 						br
 						.english PhD Genome Sciences
 						.french  Professeur en Sciences Génétiques
-						| University of Washington Seattle
+						span University of Washington Seattle
 						br
 						.english Department of Genome Sciences
-						.french Departement de Sciences Génétiques
-						span.english updated:
-						span.french mis à jour:
-						|  25/05/2011
+						.french Département de Sciences Génétiques
+						.english Updated:
+						.french Mis à jour:
+						span 25/05/2011
 						br
-						span.french traduit par: Mikaël Garcia le 19/03/2020
+						.french Traduit par: 
+						span.french Mikaël Garcia le 19/03/2020
 					p
 						span.english
 							| Parents sometimes wonder if their children can have both ADHD and High IQ levels.
