--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -397,8 +397,10 @@ h1.liens {
   margin-bottom: 0;
 }
 
-h3.auteurs {
+.auteurs {
   margin-top: 0;
+  font-size: 1em;
+  color: white;
 }
 
 p.first {
