--- a/public/css/cv.css
+++ b/public/css/cv.css
@@ -45,7 +45,7 @@ $$$$$$  BALISES HTML   $$$$$
 .backgroundRed {
   text-align: center;
   font-family: monospace;
-  background-color: rgba(255, 255, 255, 0.4);
+  background-color: whitesmoke;
   border: 1px solid #08021f;
   border-radius: 10px;
   margin-top: 1%;
@@ -84,6 +84,7 @@ html {
   text-transform: uppercase;
   margin-top: 0em;
   margin-bottom: 0em;
+  font-size: 1em;
 }
 
 /*****
