--- a/public/css/scss/cv.scss
+++ b/public/css/scss/cv.scss
@@ -48,7 +48,7 @@ $$$$$$  BALISES HTML   $$$$$
   //background-color: rgba(255, 0, 0, 0.5);
   text-align: center;
   font-family: monospace;
-  background-color: rgba(255, 255, 255, 0.4);
+  background-color: rgba(245, 245, 245, 1);
   border: 1px solid #08021f;
   border-radius: 10px;
   margin-top: 1%;
@@ -90,7 +90,7 @@ html {
   text-transform: uppercase;
   margin-top: 0em;
   margin-bottom: 0em;
-  //font-size: 1.5em;
+  font-size: 1em;
 }
 
 /*****
