--- a/public/css/scss/styles.scss
+++ b/public/css/scss/styles.scss
@@ -241,11 +241,7 @@ a {
     text-align: center;
     font-family: $myFont;
     font-size: 1.2em;
-    margin-left: 7px;
-    margin-right: 7px;
-    margin-bottom: 10px;
-    margin-top: 5px;
-    margin-bottom: 2.5%;
+    margin: 1%;
 }
 
 #s0leil,
@@ -258,9 +254,9 @@ a {
     background-color: transparent;
     color: white;
     width: 18%;
-    bottom: 40px;
     margin-left: 39%;
     margin-right: 39%;
+    margin-top: 1%;
     font-family: $myFont;
     border-radius: 28px;
     font-size: 1em;
