--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -549,11 +549,7 @@ a {
   text-align: center;
   font-family: monospace;
   font-size: 1.2em;
-  margin-left: 7px;
-  margin-right: 7px;
-  margin-bottom: 10px;
-  margin-top: 5px;
-  margin-bottom: 2.5%;
+  margin: 1%;
 }
 
 #BtnJs0nPl4Y {
@@ -561,9 +557,9 @@ a {
   background-color: transparent;
   color: white;
   width: 18%;
-  bottom: 40px;
   margin-left: 39%;
   margin-right: 39%;
+  margin-top: 1%;
   font-family: monospace;
   border-radius: 28px;
   font-size: 1em;
